Hmm, maybe I need to hand-roll harder
